# Character-Sheet

./: .gitignore  README.md  default.nix
.obelisk/impl/: github.json
backend/: backend.cabal
backend/src/: Backend.hs
backend/src/Backend/: Database.hs  Orphans.hs
backend/tests/: main.hs
common/: common.cabal
common/src/Common/: Api.hs  Compose.hs  Prelude.hs  Route.hs
common/src/Data/: CharacterSheet.hs
common/src/Reflex/: Util.hs
common/tests/: main.hs
database-util/: database-util.cabal
database-util/src/: Main.hs
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src/Frontend/: About.hs  Armor.hs  Bulma.hs  Data.hs  Elements.hs  Feats.hs  Input.hs  Inventory.hs  Javascript.hs  Layout.hs  License.hs  Materialize.hs  Prelude.hs  Spells.hs  Storage.hs
frontend/src/Reflex/: Util.hs
spell_parser/: LICENSE  spell-parser.cabal
spell_parser/src/: Main.hs
static/css/: Style.css
