name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , HDBC
               , HDBC-sqlite3
               , aeson
               , common
               , containers
               , dependent-sum
               , esqueleto
               , frontend
               , obelisk-backend
               , obelisk-route
               , persistent
               , persistent-sqlite
               , persistent-template
               , snap
               , text
  exposed-modules:
    Backend
  other-modules:
    Backend.Database
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
