name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , aeson
               , common
               , containers
               , dependent-sum
               , esqueleto
               , frontend
               , mtl
               , obelisk-backend
               , obelisk-route
               , persistent
               , persistent-sqlite
               , persistent-template
               , snap
               , text
  exposed-modules:
    Backend
    Backend.Database
    Backend.Orphans
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
               , obelisk-route

Test-Suite test-common
    type: exitcode-stdio-1.0
    main-is: tests/main.hs
    build-depends: base
                 , backend
                 , common
                 , hedgehog
