name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base,
                 adjunctions,
                 containers,
                 distributive,
                 text

  exposed-modules:
    Common.Api
    Common.Compose
    Data.CharacterSheet
