name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , adjunctions
               , aeson
               , containers
               , distributive
               , mtl
               , obelisk-route
               , reflex-dom
               , text

  exposed-modules:
    Common.Api
    Common.Compose
    Common.Prelude
    Common.Route
    Data.CharacterSheet
