name: common
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , adjunctions
               , aeson
               , containers
               , distributive
               , mtl
               , obelisk-route
               , reflex-dom
               , text

  exposed-modules:
    Common.Api
    Common.Compose
    Common.Prelude
    Common.Route
    Data.CharacterSheet

Test-Suite test-common
    type: exitcode-stdio-1.0
    main-is: tests/main.hs
    build-depends: base
                 , common
                 , hedgehog
