name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , adjunctions
               , common
               , containers
               , lens
               , reflex
               , reflex-dom
               , static
               , text
               , lens
  exposed-modules:
    Frontend
    Frontend.Input
    Frontend.Layout
  -- ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src
  build-depends: base
               , adjunctions
               , common
               , containers
               , frontend
               , ghcjs-dom
               , lens
               , reflex
               , reflex-dom
               , static
               , text
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
