name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , adjunctions
               , common
               , containers
               , jsaddle
               , lens
               , lens
               , mtl
               , obelisk-frontend
               , obelisk-generated-static
               , obelisk-route
               , reflex
               , reflex-dom
               , text
  exposed-modules:
    Frontend
    Frontend.Input
    Frontend.Layout
  other-modules:
    Frontend.About
    Frontend.Elements
    Frontend.Storage
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , aeson
               , adjunctions
               , common
               , containers
               , frontend
               , ghcjs-dom
               , lens
               , reflex
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
               , text
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
